# cxx-server

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt
CMake/Modules/: AddExecutable.cmake  Common.cmake  DetectCompiler.cmake  GenerateVersion.cmake  TargetSources.cmake
CMake/Templates/: Exports.hpp.in  Version.hpp.in
Docs/: CMakeLists.txt
Source/: CMakeLists.txt
Source/CxxServer/: CMakeLists.txt  Main.cpp  Protocol.cpp  Protocol.hpp  Server.cpp  Server.hpp  boostio.hxx  command.hxx  connection.hxx  ctf.hxx  datastream.hxx  main.cxx  packet.hxx  protocol.hxx  server.hxx
Source/CxxServer/Details/: CMakeLists.txt
Source/CxxServer/Details/V75/: CMakeLists.txt  Protocol.cpp  Protocol.hpp
Source/CxxServer/commands/: CMakeLists.txt  kill.hxx  say.hxx
Source/CxxServer/data/: CMakeLists.txt  base.hxx  color.hxx  grenade.hxx  intel.hxx  name.hxx  player.hxx  position.hxx  team.hxx  weapon.hxx
Spades/: CMakeLists.txt  Compress.hxx  Connection.hxx  DataStream.cxx  DataStream.hxx  Enums.hxx  Main.cxx  Packet.hxx  Peer.cxx  Player.cxx  Player.hxx  Protocol.cxx  Protocol.hxx  Server.cxx  Server.hxx  Team.hxx  Vector.hxx  baseconnection.hxx  baseprotocol.hxx  connection.hxx  ctf.hxx  datastream.hxx  enet.hxx  main.cxx  map.hxx  peer.hxx  protocol.hxx  server.hxx  types.hxx
Spades/Core/: DataChunk.hxx  DataStream.hxx  Random.hxx  Types.hxx  Vector.hxx
Spades/Core/Math/: Vector3.hxx
Spades/Data/: Enums.hxx  Player.hxx  Team.hxx
Spades/TBR/: Compress.cxx  Connection.hxx  DataChunk.hxx  DataStream.hxx  Enums.hxx  File.hxx  Map.cxx  Map.hxx  Packet.cxx  Peer.hxx  Player.hxx  Protocol.cxx  Protocol.hxx  Server.cxx  Server.hxx  Spawn.hxx  Team.hxx  Types.hxx  World.hxx
Spades/TBR/Core/: Types.hxx
Spades/TBR/Math/: Math.hxx  Vector2.hxx
Spades/Util/: Compress.cxx  Compress.hxx  Map.cxx  Map.hxx  Peer.cxx  Peer.hxx  ReadFile.cxx  ReadFile.hxx  Spawn.hxx  datastream.hxx  enums.hxx  map.hxx  protocol.hxx
cmake/modules/: Common.cmake  Compiler.cmake  CxxServer.cmake  GenerateHeaders.cmake  Options.cmake  ProjectTarget.cmake  Tools.cmake  project_common.cmake  project_compiler.cmake  project_target.cmake  project_version.cmake
cmake/scripts/: ClangFormat.cmake  IncludeWhatYouUse.cmake
cmake/templates/: ClassDefinitions.hpp.in  Configuration.h  version.hxx.in
docs/: CMakeLists.txt
source/: CMakeLists.txt
source/cxx-server/: CMakeLists.txt  Connection.cpp  Connection.hpp  Protocol.cpp  Protocol.hpp  Server.cpp  Server.hpp  connection.cxx  handler.hxx  main.cxx  protocol.cxx  protocol.hxx  server.cxx  server.hxx
source/cxx-server/data/: CMakeLists.txt
source/cxx-server/details/: CMakeLists.txt
source/cxx-server/details/packets/: Common.hpp  WorldUpdate.hpp
source/cxx-server/details/v75/: CMakeLists.txt  Protocol.cpp  Protocol.hpp
source/cxx-server/old/: enet.hxx  manager.hxx  map.hxx
source/cxx-server/old/data/: entity.hxx  enums.hxx  line.hxx  ray.hxx  score.hxx
source/cxxserver/: CMakeLists.txt  Main.cpp  Map.cpp  Map.hpp  Protocol.hpp  Server.cpp  Server.hpp  connection.cxx  connection.hxx  enet.hxx  main.cxx  map.cxx  map.hxx  protocol.cxx  protocol.hxx  server.cxx  server.hxx  server_api.cxx  server_api.hxx
source/cxxserver/api/: server_api.cxx  server_api.hxx
source/cxxserver/details/: enums.hxx
source/cxxserver/details/packets/: CMakeLists.txt  common.hxx  world_update.hxx
source/cxxserver/details/v75/: protocol_v75.cxx  protocol_v75.hxx
source/cxxserver/old/: command.hxx  map.hxx  peer.hxx
source/cxxserver/old/commands/: CMakeLists.txt
source/cxxserver/old/data/: spawn.hxx
spadesx/: CMakeLists.txt  base.hxx  baseconnection.hxx  baseprotocol.hxx  boostio.hxx  command.hxx  connection.hxx  ctf.hxx  datastream.hxx  enet.hxx  handler.hxx  intel.hxx  line.hxx  main.cxx  manager.hxx  map.hxx  packet.hxx  peer.hxx  playerdata.hxx  protocol.hxx  server.hxx  spawn.hxx  update.hxx  world.hxx
spadesx/TBR/: Protocol.cxx  Protocol.hxx
spadesx/commands/: CMakeLists.txt  kill.hxx  say.hxx
spadesx/data/: CMakeLists.txt  base.hxx  chatdata.hxx  color.hxx  colordata.hxx  entity.hxx  enums.hxx  grenade.hxx  input.hxx  intel.hxx  inteldata.hxx  lastkill.hxx  name.hxx  namedata.hxx  packet.hxx  player.hxx  playerdata.hxx  playerstate.hxx  position.hxx  positiondata.hxx  ray.hxx  score.hxx  scoredata.hxx  state.hxx  team.hxx  teamdata.hxx  transform.hxx  transformdata.hxx  types.hxx  weapon.hxx  weapondata.hxx
