#
# Set linters
#

if(CXXSERVER_ENABLE_CPPCHECK AND CPPCHECK)
    set(CMAKE_C_CPPCHECK "${CXXSERVER_PROPERTY_CPPCHECK}")
    set(CMAKE_CXX_CPPCHECK "${CXXSERVER_PROPERTY_CPPCHECK}")
endif()

if(CXXSERVER_ENABLE_CLANG_TIDY AND CLANG_TIDY)
    set(CMAKE_C_CLANG_TIDY "${CXXSERVER_PROPERTY_CLANG_TIDY}")
    set(CMAKE_CXX_CLANG_TIDY "${CXXSERVER_PROPERTY_CLANG_TIDY}")
    set(CMAKE_C_CLANG_TIDY_EXPORT_FIXES_DIR "${CMAKE_CURRENT_BINARY_DIR}")
    set(CMAKE_CXX_CLANG_TIDY_EXPORT_FIXES_DIR "${CMAKE_CURRENT_BINARY_DIR}")
endif()

if(CXXSERVER_ENABLE_INCLUDE_WHAT_YOU_USE AND INCLUDE_WHAT_YOU_USE)
    set(CMAKE_C_INCLUDE_WHAT_YOU_USE "${CXXSERVER_PROPERTY_INCLUDE_WHAT_YOU_USE}")
    set(CMAKE_CXX_INCLUDE_WHAT_YOU_USE "${CXXSERVER_PROPERTY_INCLUDE_WHAT_YOU_USE}")
endif()

#
# Add subdirectories
#

add_subdirectory(cxxserver)

#
# Documentation
#

if(DOXYGEN_FOUND)
    # Doxygen options
    set(DOXYGEN_QUIET YES)
    set(DOXYGEN_OUTPUT_DIRECTORY ${CXXSERVER_DOCUMENTATION_DIRECTORY})
    set(DOXYGEN_EXTRACT_ALL YES)

    # Add documentation target
    doxygen_add_docs(
        docs
        ${CXXSERVER_SOURCE_DIRECTORY}
        WORKING_DIRECTORY ${CXXSERVER_SOURCE_DIRECTORY}
        COMMENT "Generating documentation"
        # ALL
    )
endif()
